Refactor du code + correction d'un bug lié au déplacement des entités